--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas
-numpy==1.24.4
-scikit-learn
-dill
-fastapi
-uvicorn[standard]
-jinja2
-joblib
-python-multipart
--e .
+numpy==2.3.3
+pandas==2.3.1
+scikit-learn==1.7.1
+scipy==1.16.1
+dill==0.4.0
+fastapi==0.110.0
+uvicorn[standard]==0.30.1
+jinja2==3.1.6
+python-multipart==0.0.20
+joblib==1.4.2
